# components/reception/reception.model.js
@@ -8,10 +8,15 @@ class ReceptionModel {
   async getReceptions(args) {
 
     const {offset, limit,} = args;
-    return await db.select('*').from('receptions').limit(limit).offset(offset);
+    return await db
+      .select('*')
+      .from('receptions')
+      .orderBy('id')
+      .limit(limit)
+      .offset(offset);
   }
 
-  async create(args) {
+  async createOrUpdate(args) {
 
     const {
       doctor_id,
@@ -20,6 +25,36 @@ class ReceptionModel {
       start_time,
       end_time,
     } = args;
+
+    /* remove overlapped intervals */
+    const oldRecords = await db.select('*').from('receptions').where({doctor_id, date,}),
+      remove = [];
+
+    let newRecord = {
+        start_time,
+        end_time,
+      },
+      oldRecord,
+      overlap;
+
+    for (let i = 0; i < oldRecords.length; i++) {
+
+      oldRecord = oldRecords[i];
+
+      overlap = newRecord.start_time >= oldRecord.start_time && newRecord.start_time < oldRecord.end_time ||
+        newRecord.end_time > oldRecord.start_time && newRecord.end_time <= oldRecord.end_time;
+
+      if (overlap && !remove.includes(oldRecord.id)) {
+
+        remove.push(oldRecord.id);
+      }
+    }
+
+    if (remove.length) {
+
+      await db('receptions').del().whereIn('id', remove);
+    }
+
     return await db('receptions').insert({
       doctor_id,
       patient_id,
@@ -33,25 +68,6 @@ class ReceptionModel {
 
     const {receptionId,} = args;
     return await db.select('*').from('receptions').where({id: receptionId});
-  }
-
-  async update(args) {
-
-    const {
-      id,
-      doctor_id,
-      patient_id,
-      date,
-      start_time,
-      end_time,
-    } = args;
-    return await db('receptions').update({
-      doctor_id,
-      patient_id,
-      date,
-      start_time,
-      end_time,
-    }).where({id}).returning('id');
   }
 
   async delete(args) {
